--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Я смотрю аниме</h1>
+<h1>Я хочу пиццу</h1>
 <p>Нет, я иду в секцию по волейболу</p>
 </body>
 </html>
