--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link href='some_styles.css'>
+</head>
 <body>
-<h1>Макар го в Valorant
+<div class='text-red'>Макар го в Valorant</div>
 </body>
 </html>
