--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href='some_styles.css'>
+<link href='./some_styles.css'>
 </head>
 <body>
 <div class='text-red'>Макар го в Valorant</div>
