--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link href='some_styles.css' rel='stylesheet'>
-</head>
-<body>
-<div class='text-red'>Макар го в Valorant</div>
-</body>
+	<head>
+		<title>Главная</title>
+		<link rel="stylesheet" href="./test.css">
+		<link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+	</head>
+	<body>
+	<font face="Verdana">
+	<h1>Глобальные компьютерные сети</h1>
+	<hr>
+	<center>
+	<img src="./img/main.jpg" class="half-width">
+	<hr>
+	<div class="menu">
+	<ul>
+		<li><a href='history.html'>История глобальных сетей</a></li>
+		<li><a href='structure.html'>Основные понятия в глобальных сетях</a></li>
+		<li><a href='internet.html'>Структура Интернета</a></li>
+	</ul>
+	</div>
+	<br>
+	<p><i>Авторы: Бердышев Григорий, Сапегин Андрей. 10 МАТ</i></p>
+	</center>
+	</font>
+	</body>
+
 </html>
