--- a/structure.html
+++ b/structure.html
@@ -34,9 +34,12 @@
 	</table>
 	<p>Для подключения компьютера к сети в обоих типах сетей может использоваться
 	специальное устройство, называемое модемом.</p>
-	<p class="modem-desciption description">Модем - это устройство для преобразования аналогового сигнала в цифровой для компьютера и наоборот. 
-		Модем является одним из примеров ЦАП/АЦП-устройств.</p>
-	<img src="./img/adsl_modem.jpg" height="450" weight="640" align="right">
+	<div>
+	<figure class="sign" style="width: 35%">
+	<p><img class="modem" src="./img/adsl_modem.jpg" height="450" weight="640"></p>
+	<figcaption class="description">Модем - это устройство для преобразования аналогового сигнала в цифровой для компьютера и наоборот. 
+		Модем является одним из примеров ЦАП/АЦП-устройств.</figcaption>
+	</figure>
 	<div class="half-width">
 		<h2>Метод коммутации пакетов</h2>
 		<p>Идея использования этой технологии зародилась в конце 1970-х годов и заключалась в том, что любой компьютер в сети должен иметь несколько альтернативных маршрутов для отправки информации.
@@ -44,6 +47,7 @@
 			и формирование исходного сообщения.
 		</p>
 		<p>Порядок обмена пакетами, а также структура заголовков пакетов определяется протоколом TCP<p>
+	</div>
 	</div>
 	<img src="./img/comm.png" class="half-width">
 	<p class="description">Схема коммутации пакетов</p>
