--- a/history.html
+++ b/history.html
@@ -10,8 +10,10 @@
 		<h1>История глобальных сетей</h1>
 		<hr>
 		<h2>ARPANET</h2>
-		<img src="./img/fisrt_server_arpanet.webp" align="right" class="half-width">
-		<div class='description first-server-desciption'>Первый сервер ARPANET</div>
+		<figure class="sign half-width">
+		<p><img src="./img/fisrt_server_arpanet.webp" style="width: 99%"></p>
+		<figcaption class="description">Первый сервер ARPANET</figcaption>
+		</figure>			
 		<div class="half-width">
 		<h3>Создание</h3>
 		<p><b>В 1969 году в США</b> были объединены в одну сеть несколько компьютеров оборонных и научно-исследовательских
