--- a/internet.html
+++ b/internet.html
@@ -11,8 +11,10 @@
 		<hr>	
 		<p>Интернет - это межсетевая среда с единым адресным пространством, действующая на базе стека протоколов TCP/IP.</p>
 		<p>Провайдер - это организация, предоставляющая платные услуги связи</p>
-		<img src="./img/global_network.jpg" align="right">
-		<p class="modem-desciption description">Структура глобальной сети (Интернета)</p>
+		<figure class="sign" style="width: 48%">
+		<p><img src="./img/global_network.jpg" style="width: 99%"></p>
+		<figcaption class="description">Структура глобальной сети (Интернета)</figcaption>
+		</figure>
 		<h2>Протокол IP</h2>
 		<p>Базовым протоколом, обеспечивающим передачу данных между сетями, для среды Интернет является протокол IP.</p>
 		<p>Протокол IPv4 предусматривает систему адресации, обеспечивающую точную идентификацию каждого узла сети путем присвоения ему числового адреса в формате: XXX.XXX.XXX.XXX, где XXX - десятичное число в диапазоне от 0 до 255 (1 Байт).
